# yaf-gpt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/eval/: retrieval_queries.jsonl
data/processed/: bible_study_chunks.jsonl  luke_chunks.jsonl
scripts/: build_knowledge_base.py  evaluate_retrieval.py  ingest_documents.py  inspect_knowledge_base.py
scripts/langchain/: build_runnable.py  ingest_documents.py
src/: gradio-test.py
src/yaf_gpt/: config.py
src/yaf_gpt/api/: api.py
src/yaf_gpt/core/: config.py
src/yaf_gpt/data/: knowledge_base.py  study_chunk.py
src/yaf_gpt/interface/: api.py  gradio-test.py
src/yaf_gpt/llm/: bible_client.py  bible_study_helper.py
src/yaf_gpt/model/: llm_client.py
src/yaf_gpt/pipeline/: chat_service.py
src/yaf_gpt/pipeline/langchain/: build_runnable.py  ingest_documents.py
src/yaf_gpt/scripts/langchain/: build_runnable.py  build_study_runnable.py  ingest_documents.py
src/yaf_gpt/templates/: study_notes.jinja  system_prompt.jinja  task.jinja  task_description.jinja
templates/: knowledge_base.jinja
tests/yaf_gpt/interface/: test_api.py
tests/yaf_gpt/pipeline/: test_chat_service.py
