[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaf-gpt"
version = "0.0.1"
description = "Yet another FastAPI-backed GPT experimentation playground."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0,<8.0.0",
  "ruff>=0.3.0,<0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
